@@ -121,7 +121,8 @@ public class TajoWorkerManagerService extends CompositeService
           , new ExecutionBlockId(request.getExecutionBlockId())
           , request.getContainerId()
           , new QueryContext(workerContext.getConf(), request.getQueryContext()),
-          request.getPlanJson()
+          request.getPlanJson(),
+          request.getShuffleType()
       ));
       done.run(TajoWorker.TRUE_PROTO);
     } catch (Throwable t) {
