@@ -21,6 +21,7 @@ package org.apache.tajo.worker.event;
 import org.apache.tajo.ExecutionBlockId;
 import org.apache.tajo.engine.query.QueryContext;
 import org.apache.tajo.master.cluster.WorkerConnectionInfo;
+import org.apache.tajo.plan.serder.PlanProto;
 
 public class TaskRunnerStartEvent extends TaskRunnerEvent {
 
@@ -28,17 +29,20 @@ public class TaskRunnerStartEvent extends TaskRunnerEvent {
   private final WorkerConnectionInfo queryMaster;
   private final String containerId;
   private final String plan;
+  private final PlanProto.ShuffleType shuffleType;
 
   public TaskRunnerStartEvent(WorkerConnectionInfo queryMaster,
                               ExecutionBlockId executionBlockId,
                               String containerId,
                               QueryContext context,
-                              String plan) {
+                              String plan,
+                              PlanProto.ShuffleType shuffleType) {
     super(EventType.START, executionBlockId);
     this.queryMaster = queryMaster;
     this.containerId = containerId;
     this.queryContext = context;
     this.plan = plan;
+    this.shuffleType = shuffleType;
   }
 
   public WorkerConnectionInfo getQueryMaster() {
@@ -55,5 +59,9 @@ public class TaskRunnerStartEvent extends TaskRunnerEvent {
 
   public String getPlan() {
     return plan;
+  }
+
+  public PlanProto.ShuffleType getShuffleType() {
+    return shuffleType;
   }
 }
